final push till launch

--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.html
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.html
@@ -76,12 +76,12 @@
                     <div class="col-md-12">
                         <div class="card bg-gradient-green text-white shadow--hover border-0 br-20 m-0 p-0">
                             <div class="card-body p-3 text-center">
-                                <span class="fa fa-comment fa-2x"></span>
+                                <span class="fa fa-commenting fa-2x"></span>
                                 <div class="pt-2">
                                     <span class="small text-white">Engagements</span>
                                 </div>
                                 <div class="pt-2">
-                                    <span class="text-white font-weight-bolder h5">100</span>
+                                    <span class="text-white font-weight-bolder h5 figure-caption">in Dev</span>
                                 </div>
                             </div>
                         </div>
