--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -41,21 +41,21 @@
                 <div class="card-body m-2">
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
-                            <button (click)="showPopup(1)"
+                            <button (click)="showPopup(1)" disabled
                                     class="btn btn-sm in  btn-outline-primary br-20 px-3"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
-                            <button (click)="showViewPopup(1)"
+                            <button (click)="showViewPopup(1)" disabled
                                     class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
                         </span>
                     </div>
-                    <div class="text-center mt-5 {{appTheme['text-muted']}}">{{ twCount }} account(s)</div>
+                    <div class="text-center mt-5 {{appTheme['text-muted']}}"><!--{{ twCount }} account(s)-->in Dev</div>
                 </div>
             </div>
         </div>
@@ -68,21 +68,21 @@
                 <div class="card-body m-2">
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
-                            <button (click)="showPopup(2)"
+                            <button (click)="showPopup(2)" disabled
                                     class="btn btn-sm in  btn-outline-danger br-20 px-3"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
-                            <button (click)="showViewPopup(2)"
+                            <button (click)="showViewPopup(2)" disabled
                                     class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
                         </span>
                     </div>
-                    <div class="text-center mt-5 {{appTheme['text-muted']}}">{{ fbCount }} account(s)</div>
+                    <div class="text-center mt-5 {{appTheme['text-muted']}}"><!--{{ fbCount }} account(s)-->in Dev</div>
                 </div>
             </div>
         </div>
@@ -95,21 +95,21 @@
                 <div class="card-body m-2">
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
-                            <button (click)="showPopup(3)"
+                            <button (click)="showPopup(3)" disabled
                                     class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
-                            <button (click)="showViewPopup(3)"
+                            <button (click)="showViewPopup(3)" disabled
                                     class="btn btn-sm in  btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
                         </span>
                     </div>
-                    <div class="text-center mt-5 {{appTheme['text-muted']}}">{{ liCount }} account(s)</div>
+                    <div class="text-center mt-5 {{appTheme['text-muted']}}"><!--{{ liCount }} account(s)-->in Dev</div>
                 </div>
             </div>
         </div>
