--- a/lib/src/home_component/home_component.html
+++ b/lib/src/home_component/home_component.html
@@ -1,4 +1,4 @@
-<div class="row m-0 p-0">
+<!--<div class="row m-0 p-0">
     <div class="col-lg-6 col-md-12 col-sm-12 px-0" style="height: 100vh; width: 100vw; overflow-x: hidden; overflow-y: scroll; box-shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, 0.16) !important;">
         <nav-app></nav-app>
         <div class="container nt-center mt-3 mt-md-5">
@@ -35,5 +35,70 @@
     </div>
     <div class="col-lg-6 col-sm-12 px-0 d-none d-lg-block">
         <img src="img/svg-bg-01.png" alt="home-bg" style="height: 100vh; width: inherit">
+    </div>
+</div>-->
+<div class="w-100 m-0 p-0" id="home">
+    <div class="row m-0">
+        <div class="col-sm-12 col-md-6 py-2 py-md-3 px-4 px-md-5" id="col-1">
+            <nav-app></nav-app>
+            <div class="mt-5" id="catchy-text">
+                <div class="h1 pt-5 font-weight-bold" style="line-height: 2.2rem;">
+                    Grow your <span class="h1 text-uppercase font-weight-bold text-white bus">audience</span>
+                    <span class="h3 font-weight-bold" style="font-family: Pacifico;">digitally</span><span class="text-danger">.</span>
+                </div>
+            </div>
+            <div class="mt-4 pr-5" id="caption">
+                <div class="h6 text-muted figure-caption" style="font-family: Google-Sans;">
+                    Anyone who wants to grow a business can use this marketing tool
+                    to manage their social media account pages and feeds.
+                </div>
+            </div>
+            <div class="mt-3 mb-5">
+                <button class="btn btn-sm btn-dark px-4 py-2" (click)="gotoLogin()" style="border-radius: 5px;">Use Postit</button>
+            </div>
+            <footer class="footer py-4 text-muted figure-caption">
+                &copy; 2021 by Shiftr. All right reserved
+            </footer>
+        </div>
+        <div class="col-sm-12 col-md-6 p-5" id="col-2">
+            <div class="row mx-0">
+                <div class="col-sm-12 col-md-12">
+                    <span class="m-card font-weight-bold">Postit is a marketing tool for</span>
+                </div>
+            </div>
+            <div class="row mx-0 mt-4">
+                <div class="col-sm-6 col-md-3 text-center">
+                    <div class="card shadow bg-primary mini-card">
+                        <div class="card-body">
+                            <span class="fa fa-plus-circle text-white fa-2x"></span>
+                            <span class="d-block d-md-none font-weight-bold text-white">Creating posts</span>
+                            <span class="font-weight-bold figure-caption card-caption shadow">Creating posts</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mx-0 mt-4">
+                <div class="col-sm-6 col-md-3 text-center">
+                    <div class="card shadow bg-success mini-card">
+                        <div class="card-body">
+                            <span class="fa fa-clock-o text-white fa-2x"></span>
+                            <span class="d-block d-md-none font-weight-bold text-white">Scheduling posts</span>
+                            <span class="font-weight-bold figure-caption card-caption shadow">Scheduling posts</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mx-0 mt-4">
+                <div class="col-sm-6 col-md-3 text-center">
+                    <div class="card shadow bg-dark mini-card">
+                        <div class="card-body">
+                            <span class="fa fa-commenting text-white fa-2x"></span>
+                            <span class="d-block d-md-none font-weight-bold text-white">Replying to comments</span>
+                            <span class="font-weight-bold figure-caption card-caption shadow">Replying to comments</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
