--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
   </head>
   <body id="postit-body">
     <postit-app>
-      <img src="img/load.gif" alt="Loading....." class="loading-gif">
+      <img src="img/postit-01.png" alt="Loading..." class="loading-gif">
     </postit-app>
   </body>
 </html>
