--- a/lib/src/dashboard_component/manage_post_component/manage_post_component.html
+++ b/lib/src/dashboard_component/manage_post_component/manage_post_component.html
@@ -14,6 +14,7 @@
                                            placeholder="Schedule title" type="text">
                                 </div>
                                 <div class="form-group">
+                                    <label for="from" class="pl-2 figure-caption {{appTheme['text-muted']}}">Schedule from</label>
                                     <div class="form-row">
                                         <div class="col-7">
                                             <input #sd id="from" type="date" class="{{appTheme['box-one']}} {{appTheme['border']}} nt-form-control br-20" placeholder="Select start date" [(ngModel)]="fromDate">
@@ -24,6 +25,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                    <label for="to" class="pl-2 figure-caption {{appTheme['text-muted']}}">Schedule to</label>
                                     <div class="form-row">
                                         <div class="col-7">
                                             <input #ed id="to" type="date" class="nt-form-control {{appTheme['box-one']}} {{appTheme['border']}} nt-form-control br-20" placeholder="Select end date" [(ngModel)]="toDate">
