--- a/lib/src/dashboard_component/fb_component/fb_component.html
+++ b/lib/src/dashboard_component/fb_component/fb_component.html
@@ -1,1 +1,5 @@
-<h1> Please wait ... will redirect you soon </h1>
+<div class="container mt-3 px-md-0" style="height: calc(100vh - 64px)">
+    <div class="nt-center">
+        <span class="font-weight-bold display-4 {{appTheme['text-colour']}}">Please wait ... will redirect you soon </span>
+    </div>
+</div>
