--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -207,7 +207,7 @@
             </div>
             <div *ngIf="accounts.facebook.isEmpty" class="mb-1 p-3">
                 <div class="nt-center">
-                    <div class="text-center">No account added</div>
+                    <div class="text-center {{appTheme['text-muted']}}">No account added</div>
                 </div>
             </div>
         </template>
@@ -232,7 +232,7 @@
             </div>
             <div *ngIf="accounts.twitter.isEmpty" class="mb-1 p-3">
                 <div class="nt-center">
-                    <div class="text-center">No account added</div>
+                    <div class="text-center {{appTheme['text-muted']}}">No account added</div>
                 </div>
             </div>
         </template>
@@ -257,7 +257,7 @@
             </div>
             <div *ngIf="accounts.linkedin.isEmpty" class="mb-1 p-3">
                 <div class="nt-center">
-                    <div class="text-center">No account added</div>
+                    <div class="text-center {{appTheme['text-muted']}}">No account added</div>
                 </div>
             </div>
         </template>
