--- a/lib/src/login_component/login_component.html
+++ b/lib/src/login_component/login_component.html
@@ -1,105 +1,6 @@
-<!--<div class="container my-3">-->
-<!--    <div class="row justify-content-center">-->
-<!--        <div class="col-lg-5 col-md-8 col-sm-12 py-lg-5">-->
-<!--            <div class="card border-0">-->
-<!--                <div class="card-header bg-custom">-->
-<!--                    <div class="text-center text-white">Login</div>-->
-<!--                </div>-->
-<!--                <div class="card-body px-lg-5 py-lg-5">-->
-<!--                    <form role="form">-->
-<!--                        <div group>-->
-<!--                            <material-input-->
-<!--                                    type="email"-->
-<!--                                    label="Email"-->
-<!--                                    leadingGlyph="email">-->
-<!--                            </material-input>-->
-<!--                        </div>-->
-<!--                        <div group>-->
-<!--                            <material-input-->
-<!--                                    type="password"-->
-<!--                                    label="Password"-->
-<!--                                    leadingGlyph="fingerprint">-->
-<!--                            </material-input>-->
-<!--                        </div>-->
-<!--                        <div group>-->
-<!--                            <material-button id="login-button" (click)="gotoDashboard()">-->
-<!--                                Login-->
-<!--                            </material-button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<div id="alert" *ngIf="showAlert"
-     [class.alert-danger]="statusCode!=200"
-     [class.alert-success]="statusCode==200"
->
-    <div class="row" *ngIf="statusCode!=200">
-        <div class="col-2 my-auto">
-            <span class="fa fa-times-circle fa-2x text-danger ml-2"></span>
-        </div>
-        <div class="col-8 my-auto">
-            <span class="text-center">{{message}}</span>
-        </div>
-        <div class="col-2 my-auto">
-            <span class="fa fa-times cursor-pointer mr-2" (click)="dismissAlert()"></span>
-        </div>
-    </div>
-</div>
-<!--<div class="m-0 login-background">&lt;!&ndash;<div style="width: 100vw; height: 100vh">
-        <div class="arrow arrow&#45;&#45;top">
-            <svg xmlns="http://www.w3.org/2000/svg" width="270.11" height="649.9" overflow="visible">
-                <style>
-                    .geo-arrow {
-                        fill: none;
-                        stroke: #fff;
-                        stroke-width: 2;
-                        stroke-miterlimit: 10
-                    }
-                </style>
-                <g class="item-to bounce-1">
-                    <path class="geo-arrow draw-in" d="M135.06 142.564L267.995 275.5 135.06 408.434 2.125 275.499z" />
-                </g>
-                <circle class="geo-arrow item-to bounce-2" cx="194.65" cy="69.54" r="7.96" />
-                <circle class="geo-arrow draw-in" cx="194.65" cy="39.5" r="7.96" />
-                <circle class="geo-arrow item-to bounce-3" cx="194.65" cy="9.46" r="7.96" />
-                <g class="geo-arrow item-to bounce-2">
-                    <path class="st0 draw-in" d="M181.21 619.5l13.27 27 13.27-27zM194.48 644.5v-552" />
-                </g>
-            </svg>
-        </div>
-        <div class="arrow arrow&#45;&#45;bottom">
-            <svg xmlns="http://www.w3.org/2000/svg" width="31.35" height="649.9" overflow="visible">
-                <style>
-                    .geo-arrow {
-                        fill: none;
-                        stroke: #fff;
-                        stroke-width: 2;
-                        stroke-miterlimit: 10
-                    }
-                </style>
-                <g class="item-to bounce-1">
-                    <circle class="geo-arrow item-to bounce-3" cx="15.5" cy="580.36" r="7.96" />
-                    <circle class="geo-arrow draw-in" cx="15.5" cy="610.4" r="7.96" />
-                    <circle class="geo-arrow item-to bounce-2" cx="15.5" cy="640.44" r="7.96" />
-                    <g class="item-to bounce-2">
-                        <path class="geo-arrow draw-in" d="M28.94 30.4l-13.26-27-13.27 27zM15.68 5.4v552" />
-                    </g>
-                </g>
-            </svg>
-        </div>
-        <div class="main">
-            <div class="main__text-wrapper">
-                <svg xmlns="http://www.w3.org/2000/svg" class="dotted-circle" width="352" height="352" overflow="visible">
-                    <circle cx="176" cy="176" r="174" fill="none" stroke="#fff" stroke-width="2" stroke-miterlimit="10" stroke-dasharray="12.921,11.9271"/>
-                </svg>
-            </div>
-        </div>
-    </div>&ndash;&gt;</div>-->
+<alert *ngIf="setAlert != null" [alert]="setAlert"></alert>
 <div class="row m-0 p-0 w-100">
-    <div class="col-md-6 col-sm-12" style="width: 100vw; height: 100vh">
+    <div class="col-md-6 col-sm-12 login-box" style="width: 100vw; height: 100vh">
         <div class="limiter" style="z-index: 1000">
             <div class="container">
                 <form class="login100-form shadow">
