--- a/lib/src/navbar_component/navbar_component.html
+++ b/lib/src/navbar_component/navbar_component.html
@@ -11,13 +11,12 @@
 </nav>-->
 <nav class="navbar navbar-expand-sm navbar-light bg-transparent mx-0">
     <a class="navbar-brand" href="#">
-        <img src="img/postit-01.png" alt="logo" width="100" class="img-fluid mx-2">
+        <img src="img/postit-01.png" alt="logo" width="100" class="img-fluid mr-3">
     </a>
+    <span class="navbar-toggler navbar-toggler-icon d-lg-none border-0" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></span>
     <!-- <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation">
-
     </button> -->
-    <span class="navbar-toggler-icon navbar-toggler d-lg-none border-0" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></span>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mx-auto mt-lg-0 font-weight-bold">
             <li class="nav-item col-auto">
