--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -346,7 +346,7 @@
     <!--/Page Content-->
 </div>
 
-<div class="dialog-box card border-0 shadow-c br-20" id="log-dialog" display="false">
+<!--<div class="dialog-box card border-0 shadow-c br-20" id="log-dialog" display="false">
     <div class="card-header text-center border-0 br-20" style="background-color: rgba(0,0,0,0.12)!important; color: rgba(0,0,0,0.54)!important;">
         Logout <span class="fa fa-sign-out-alt mx-1"></span>
     </div>
@@ -357,9 +357,9 @@
             <button class="btn btn-sm btn-primary px-4 br-20" (click)="dismissDialog()">No</button>
         </div>
     </div>
-</div>
+</div>-->
 <div *ngIf="logoutPopup" class="popup br-10 p-3 shadow">
-    <div class="p-4 br-10 text-white" style="background: #1f1f1f">
+    <div class="p-4 br-10 text-white" style="background: #1f1f1f; height: 100%">
         Are you sure you want to <span class="text-danger">logout</span>? <br>
 
         <div class="mt-3 p-0 text-center">
