--- a/lib/src/login_component/login_component.html
+++ b/lib/src/login_component/login_component.html
@@ -2,7 +2,7 @@
 <div class="row m-0 p-0 w-100">
     <div class="col-md-6 col-sm-12 login-box" style="width: 100vw; height: 100vh">
         <div class="limiter" style="z-index: 1000">
-            <div class="container">
+            <div class="container p-3 p-md-5 login-container">
                 <form class="login100-form shadow">
                     <div class="p-5">
                         <div group>
